# standalone-modules

./: CMakeLists.txt  LICENSE  meta.cmake
standaloneexample/: CMakeLists.txt  depends.cmake  readme.md
standaloneexample/include/inviwo/standaloneexample/: standaloneexamplemodule.h  standaloneexamplemoduledefine.h
standaloneexample/include/inviwo/standaloneexample/processors/: standaloneprocessor.h
standaloneexample/src/: standaloneexamplemodule.cpp
standaloneexample/src/processors/: standaloneprocessor.cpp
standalonesecond/: CMakeLists.txt  depends.cmake  readme.md
standalonesecond/include/inviwo/standalonesecond/: standalonesecondmodule.h  standalonesecondmoduledefine.h
standalonesecond/include/inviwo/standalonesecond/processors/: standalonesecond.h
standalonesecond/src/: standalonesecondmodule.cpp
standalonesecond/src/processors/: standalonesecond.cpp
